2002-08-31  Rachel Hestilow  <hestilow@ximian.com>

	* generator/Method.cs: Re-enable "if null then new" behavior
	for Opaques.
	
2002-08-29  Rachel Hestilow  <hestilow@ximian.com>

	* glib/DelegateWrapper.cs: Forgot to add this.

2002-08-28  Rachel Hestilow  <hestilow@ximian.com>

	* generator/CallbackGen.cs: Generate wrappers to map
	from managed delegates to native ones.
	* generator/Ctor.cs: Call parms.Initialize for the static case.
	* generator/Parameters.cs: Add "CType" property. Append []
	to CSType if necessary. Add "HideData" property if a container
	wishes to hide the user_data (used in callbacks).
	(Initialize): Add case for callback.
	* generator/SymbolTable.cs: Add size_t.
	
	* glue/program.c: string[] marshalling is no longer broken,
	remove hack.

	* sources/Gtk.metadata: Disable
	GtkColorSelection.SetChangePaletteHook and
	GtkTreeView.GetSearchEqualFunc for now, they return delegates and
	we don't support native->managed delegate mapping yet.

2002-08-28  Joe Shaw  <joe@assbarn.com>

	* makefile: Add the art directory back in; fixes the build.

2002-08-26  Rachel Hestilow  <hestilow@ximian.com>

	* sources/Gtk.metadata: Add null-ok for Menu.Popup.

2002-08-25  Juli Mallett  <jmallett@FreeBSD.org>

	* makefile: Fix recursive invocation of make(1) to use
	the variable MAKE, to use the same utility that was
	responsible for the invocation of the initial build.

2002-08-25  Miguel de Icaza  <miguel@ximian.com>

	* gtk/TextBuffer.custom: Added SetText with a single argumnet.

	* gtk/Table.custom: Added empty constructor.  GtkTables
	automatically grow.

2002-08-23  Rachel Hestilow  <hestilow@ximian.com>

	* glue/Makefile.am: Fix # terminators.

2002-08-23  Rachel Hestilow  <hestilow@ximian.com>

	* Applied patch from Robot101 for maintainer-clean, etc.
	Needed for packaging.

2002-08-20  Rachel Hestilow  <hestilow@ximian.com>

	* generator/SymbolTable.cs (Trim): Work around "void*".
	Libart has a lovely API...
