@@ -16,6 +16,8 @@ namespace GtkSamples {
 
 	public class TreeViewDemo {
 		private static TreeStore store = null;
+		private static Dialog dialog = null;
+		private static Label dialog_label = null;
 
 		private static void ProcessType (TreeIter parent, Type t)
 		{
@@ -36,8 +38,11 @@ namespace GtkSamples {
 		private static void ProcessAssembly (TreeIter parent, Assembly asm)
 		{
 			TreeIter iter = new TreeIter ();
+			string asm_name = asm.GetName ().Name;
 
 			foreach (Type t in asm.GetTypes ()) {
+				UpdateDialog ("Loading from {0}:\n{1}", asm_name, t.ToString ());
+
 				GLib.Value Name = new GLib.Value (t.Name);
 				GLib.Value Type = new GLib.Value (t.ToString ());
 
@@ -54,8 +59,6 @@ namespace GtkSamples {
 			if (store != null)
 				return;
 
-			Console.WriteLine ("Loading data from assemblies...");
-
 			store = new TreeStore ((int)TypeFundamentals.TypeString,
 					       (int)TypeFundamentals.TypeString);
 
@@ -65,6 +68,8 @@ namespace GtkSamples {
 				// we can't show corlib due to some unimplemented
 				// stuff in some scary class.
 				if (asm.GetName ().Name == "mscorlib") continue;
+
+				UpdateDialog ("Loading {0}", asm.GetName ().Name);
 
 				GLib.Value Name = new GLib.Value (asm.GetName ().Name);
 				GLib.Value Type = new GLib.Value ("Assembly");
@@ -81,14 +86,21 @@ namespace GtkSamples {
 		{
 			Application.Init ();
 
+			Idle.Add (new IdleHandler (IdleCB));
+
+			Application.Run ();
+		}
+
+		public static bool IdleCB ()
+		{
+			PopulateStore ();
+
 			Window win = new Window ("TreeView demo");
 			win.DeleteEvent += new DeleteEventHandler (DeleteCB);
 			win.DefaultSize = new Size (640,480);
 
 			ScrolledWindow sw = new ScrolledWindow ();
 			win.Add (sw);
-
-			PopulateStore ();
 
 			TreeView tv = new TreeView (store);
 			tv.HeadersVisible = true;
@@ -108,16 +120,52 @@ namespace GtkSamples {
 			tv.AppendColumn (TypeCol);
 
 			sw.Add (tv);
+			
+			dialog.Destroy ();
+			dialog = null;
 
 			win.ShowAll ();
-
-			Application.Run ();
+			return false;
 		}
 
 		private static void DeleteCB (Object o, DeleteEventArgs args)
 		{
 			Application.Quit ();
 			args.RetVal = true;
+		}
+
+		private static void UpdateDialog (string format, params object[] args)
+		{
+			string text = String.Format (format, args);
+
+			if (dialog == null)
+			{
+				dialog = new Dialog ();
+				dialog.Title = "Loading data from assemblies...";
+				dialog.AddButton (Stock.Cancel, 1);
+				dialog.Response += new ResponseHandler (ResponseCB);
+				dialog.DefaultSize = new Size (480, 100);
+					
+				VBox vbox = dialog.VBox;
+				HBox hbox = new HBox (false, 4);
+				vbox.PackStart (hbox, true, true, 0);
+				
+				Gtk.Image icon = new Gtk.Image (Stock.DialogInfo, IconSize.Dialog);
+				hbox.PackStart (icon, false, false, 0);
+				dialog_label = new Label (text);
+				hbox.PackStart (dialog_label, false, false, 0);
+				dialog.ShowAll ();
+			} else {
+				dialog_label.Text = text;
+				while (Application.EventsPending ())
+					Application.RunIteration ();
+	 		}
+		}
+
+		private static void ResponseCB (object obj, ResponseArgs args)
+		{
+			Application.Quit ();
+			System.Environment.Exit (0);
 		}
 	}
 }
