@@ -1,5 +1,13 @@
 2002-08-31  Rachel Hestilow  <hestilow@ximian.com>
 
+	* glib/Idle.cs: Added.
+	* gtk/Application.cs: Add EventsPending, RunIteration.
+	
+	* sample/TreeViewDemo.cs: Add a status dialog while
+	populating tree.
+	
+2002-08-31  Rachel Hestilow  <hestilow@ximian.com>
+
 	* generator/Method.cs: Re-enable "if null then new" behavior
 	for Opaques.
 	
